tests/unit/compile/cases/syntax-errors/06.doctype-lt.t
<!DOCTYPE foo bar <div> test
---- THROW% ----
Unexpected "<"; expected: ">", "'", '"' or <HtmlNameWord> near `<div> test` in `%s` at line 1
